fix: scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0.8rem;
 }
 
@@ -62,7 +62,7 @@
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--active-theme-color);
-}
+} */
 
 html {
   font-size: 62.5%;
